--- a/src/main/resources/regression/dl21-doc-d2q-t5.yaml
+++ b/src/main/resources/regression/dl21-doc-d2q-t5.yaml
@@ -88,7 +88,7 @@ models:
       R@1000:
         - 0.7572
   - name: bm25-default+rocchio
-    display: +RM3
+    display: +Rocchio
     params: -hits 1000 -bm25 -rocchio
     results:
       MAP@100:
