--- a/src/main/resources/regression/msmarco-v2-passage-augmented-d2q-t5.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-augmented-d2q-t5.yaml
@@ -89,7 +89,7 @@ models:
         - 0.7625
         - 0.7649
   - name: bm25-default+rocchio
-    display: +RM3
+    display: +Rocchio
     params: -bm25 -rocchio
     results:
       MAP@100:
