--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot-v2.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot-v2.yaml
@@ -76,7 +76,7 @@ models:
       R@1000:
         - 0.9122
         - 0.9172
-  - name: unicoil-0shot-rm3
+  - name: unicoil-0shot+rm3
     display: +RM3
     params: -impact -pretokenized -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
@@ -92,7 +92,7 @@ models:
       R@1000:
         - 0.9175
         - 0.9220
-  - name: unicoil-0shot-rocchio
+  - name: unicoil-0shot+rocchio
     display: +Rocchio
     params: -impact -pretokenized -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
