--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2.yaml
@@ -76,7 +76,7 @@ models:
       R@1000:
         - 0.8987
         - 0.8995
-  - name: unicoil-noexp-0shot-rm3
+  - name: unicoil-noexp-0shot+rm3
     display: +RM3
     params: -impact -pretokenized -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
@@ -92,7 +92,7 @@ models:
       R@1000:
         - 0.9026
         - 0.9082
-  - name: unicoil-noexp-0shot-rocchio
+  - name: unicoil-noexp-0shot+rocchio
     display: +Rocchio
     params: -impact -pretokenized -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
