--- a/src/main/resources/regression/dl21-doc-segmented-unicoil-0shot-v2.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-unicoil-0shot-v2.yaml
@@ -10,7 +10,7 @@ index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-0shot-v2/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 124131414
   documents (non-empty): 124131414
@@ -77,3 +77,31 @@ models:
         - 0.3700
       R@1000:
         - 0.7069
+  - name: unicoil-0shot+rm3
+    display: +RM3
+    params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -impact -pretokenized -rm3
+    results:
+      MAP@100:
+        - 0.3297
+      MRR@100:
+        - 0.9357
+      nDCG@10:
+        - 0.6979
+      R@100:
+        - 0.4237
+      R@1000:
+        - 0.7608
+  - name: unicoil-0shot+rocchio
+    display: +Rocchio
+    params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -impact -pretokenized -rocchio
+    results:
+      MAP@100:
+        - 0.3434
+      MRR@100:
+        - 0.9649
+      nDCG@10:
+        - 0.7061
+      R@100:
+        - 0.4374
+      R@1000:
+        - 0.7809
