--- a/src/main/resources/regression/dl21-passage-unicoil-0shot.yaml
+++ b/src/main/resources/regression/dl21-passage-unicoil-0shot.yaml
@@ -10,7 +10,7 @@ index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-0shot/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 138364198
   documents (non-empty): 138364198
@@ -77,3 +77,31 @@ models:
         - 0.4731
       R@1000:
         - 0.7551
+  - name: unicoil-0shot+rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      MAP@100:
+        - 0.2864
+      MRR@100:
+        - 0.7493
+      nDCG@10:
+        - 0.6150
+      R@100:
+        - 0.5141
+      R@1000:
+        - 0.7906
+  - name: unicoil-0shot+rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      MAP@100:
+        - 0.2890
+      MRR@100:
+        - 0.7749
+      nDCG@10:
+        - 0.6383
+      R@100:
+        - 0.5147
+      R@1000:
+        - 0.8096
