--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
@@ -10,7 +10,7 @@ index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-0shot/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
-index_options: -impact -pretokenized
+index_options: -impact -pretokenized -storeDocvectors
 index_stats:
   documents: 138364198
   documents (non-empty): 138364198
@@ -76,3 +76,35 @@ models:
       R@1000:
         - 0.7616
         - 0.7671
+  - name: unicoil-0shot+rm3
+    display: +RM3
+    params: -impact -pretokenized -rm3
+    results:
+      MAP@100:
+        - 0.1320
+        - 0.1339
+      MRR@100:
+        - 0.1332
+        - 0.1348
+      R@100:
+        - 0.5534
+        - 0.5550
+      R@1000:
+        - 0.7731
+        - 0.7698
+  - name: unicoil-0shot+rocchio
+    display: +Rocchio
+    params: -impact -pretokenized -rocchio
+    results:
+      MAP@100:
+        - 0.1319
+        - 0.1371
+      MRR@100:
+        - 0.1334
+        - 0.1380
+      R@100:
+        - 0.5557
+        - 0.5696
+      R@1000:
+        - 0.7800
+        - 0.7849
