Bert Analyzer Implementation

--- a/pom.xml
+++ b/pom.xml
@@ -465,5 +465,10 @@
       <artifactId>guava</artifactId>
       <version>30.1.1-jre</version>
     </dependency>
+    <dependency>
+      <groupId>ai.djl.huggingface</groupId>
+      <artifactId>tokenizers</artifactId>
+      <version>0.18.0</version>
+    </dependency>
   </dependencies>
 </project>
