--- a/src/main/resources/regression/dl19-passage-hgf-wp.yaml
+++ b/src/main/resources/regression/dl19-passage-hgf-wp.yaml
@@ -48,7 +48,7 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2019.html)"
     id: dl19
-    path: topics.dl19-passage.wp.tsv.gz
+    path: topics.dl19-passage.txt
     qrel: qrels.dl19-passage.txt
 
 models:
