--- a/src/main/resources/regression/dl20-passage-hgf-wp.yaml
+++ b/src/main/resources/regression/dl20-passage-hgf-wp.yaml
@@ -48,7 +48,7 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
     id: dl20
-    path: topics.dl20.wp.tsv.gz
+    path: topics.dl20.txt
     qrel: qrels.dl20-passage.txt
 
 models:
