--- a/pom.xml
+++ b/pom.xml
@@ -474,6 +474,8 @@
       <groupId>ai.djl</groupId>
       <artifactId>api</artifactId>
       <version>0.16.0</version>
+    </dependency>
+    <dependency>
       <groupId>ai.djl.huggingface</groupId>
       <artifactId>tokenizers</artifactId>
       <version>0.18.0</version>
