generate miracl  documentation

--- a/src/main/resources/regression/miracl-v1.0-ar.yaml
+++ b/src/main/resources/regression/miracl-v1.0-ar.yaml
@@ -32,7 +32,7 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MIRACL (Arabic): dev](https://github.com/project-miracl/miracl"
+  - name: "[MIRACL (Arabic): dev](https://github.com/project-miracl/miracl)"
     id: dev
     path: topics.miracl-v1.0-ar-dev.tsv
     qrel: qrels.miracl-v1.0-ar-dev.tsv
