--- a/src/main/resources/regression/miracl-v1.0-ru.yaml
+++ b/src/main/resources/regression/miracl-v1.0-ru.yaml
@@ -32,7 +32,7 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MIRACL (Russian): dev](https://github.com/project-miracl/miracl"
+  - name: "[MIRACL (Russian): dev](https://github.com/project-miracl/miracl)"
     id: dev
     path: topics.miracl-v1.0-ru-dev.tsv
     qrel: qrels.miracl-v1.0-ru-dev.tsv
