--- a/src/main/resources/regression/miracl-v1.0-te.yaml
+++ b/src/main/resources/regression/miracl-v1.0-te.yaml
@@ -32,7 +32,7 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MIRACL (Telugu): dev](https://github.com/project-miracl/miracl"
+  - name: "[MIRACL (Telugu): dev](https://github.com/project-miracl/miracl)"
     id: dev
     path: topics.miracl-v1.0-te-dev.tsv
     qrel: qrels.miracl-v1.0-te-dev.tsv
