--- a/src/main/resources/regression/miracl-v1.0-zh.yaml
+++ b/src/main/resources/regression/miracl-v1.0-zh.yaml
@@ -32,7 +32,7 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MIRACL (Chinese): dev](https://github.com/project-miracl/miracl"
+  - name: "[MIRACL (Chinese): dev](https://github.com/project-miracl/miracl)"
     id: dev
     path: topics.miracl-v1.0-zh-dev.tsv
     qrel: qrels.miracl-v1.0-zh-dev.tsv
