--- a/src/main/resources/regression/miracl-v1.0-ar.yaml
+++ b/src/main/resources/regression/miracl-v1.0-ar.yaml
@@ -2,7 +2,7 @@
 corpus: miracl-v1.0-ar
 corpus_path: collections/miracl-corpus/miracl-corpus-v1.0-ar
 
-index_path: indexes/lucene-index.miracl-v1.0-arabic/
+index_path: indexes/lucene-index.miracl-v1.0-ar/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
