--- a/src/main/resources/regression/miracl-v1.0-fa.yaml
+++ b/src/main/resources/regression/miracl-v1.0-fa.yaml
@@ -2,7 +2,7 @@
 corpus: miracl-v1.0-fa
 corpus_path: collections/miracl-corpus/miracl-corpus-v1.0-fa
 
-index_path: indexes/lucene-index.miracl-v1.0-persian/
+index_path: indexes/lucene-index.miracl-v1.0-fa/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
