--- a/src/main/resources/regression/miracl-v1.0-fi.yaml
+++ b/src/main/resources/regression/miracl-v1.0-fi.yaml
@@ -2,7 +2,7 @@
 corpus: miracl-v1.0-fi
 corpus_path: collections/miracl-corpus/miracl-corpus-v1.0-fi
 
-index_path: indexes/lucene-index.miracl-v1.0-finnish/
+index_path: indexes/lucene-index.miracl-v1.0-fi/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
