--- a/src/main/resources/regression/miracl-v1.0-fr.yaml
+++ b/src/main/resources/regression/miracl-v1.0-fr.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: miracl-v1.0-en
-corpus_path: collections/miracl-corpus/miracl-corpus-v1.0-en
+corpus: miracl-v1.0-fr
+corpus_path: collections/miracl-corpus/miracl-corpus-v1.0-fr
 
-index_path: indexes/lucene-index.miracl-v1.0-english/
+index_path: indexes/lucene-index.miracl-v1.0-fr/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
-index_options: -storePositions -storeDocvectors -storeRaw -language en
+index_options: -storePositions -storeDocvectors -storeRaw -language fr
 index_stats:
-  documents: 32893221
-  documents (non-empty): 32893219
-  total terms: 1505029955
+  documents: 14636953
+  documents (non-empty): 14636953
+  total terms: 508723988
 
 metrics:
   - metric: nDCG@10
@@ -32,17 +32,17 @@ topic_reader: TsvString
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MIRACL (English): dev](https://github.com/project-miracl/miracl)"
+  - name: "[MIRACL (French): dev](https://github.com/project-miracl/miracl)"
     id: dev
-    path: topics.miracl-v1.0-en-dev.tsv
-    qrel: qrels.miracl-v1.0-en-dev.tsv
+    path: topics.miracl-v1.0-fr-dev.tsv
+    qrel: qrels.miracl-v1.0-fr-dev.tsv
 
 models:
   - name: bm25
     display: BM25
-    params: -bm25 -hits 100 -language en
+    params: -bm25 -hits 100 -language fr
     results:
       nDCG@10:
-        - 0.3506
+        - 0.1832
       R@100:
-        - 0.8190
+        - 0.6528
