--- a/src/main/resources/regression/miracl-v1.0-ru.yaml
+++ b/src/main/resources/regression/miracl-v1.0-ru.yaml
@@ -2,7 +2,7 @@
 corpus: miracl-v1.0-ru
 corpus_path: collections/miracl-corpus/miracl-corpus-v1.0-ru
 
-index_path: indexes/lucene-index.miracl-v1.0-russian/
+index_path: indexes/lucene-index.miracl-v1.0-ru/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
