--- a/src/main/resources/regression/miracl-v1.0-te.yaml
+++ b/src/main/resources/regression/miracl-v1.0-te.yaml
@@ -2,7 +2,7 @@
 corpus: miracl-v1.0-te
 corpus_path: collections/miracl-corpus/miracl-corpus-v1.0-te
 
-index_path: indexes/lucene-index.miracl-v1.0-telugu/
+index_path: indexes/lucene-index.miracl-v1.0-te/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
