Fixed bug in CLIR regressions.

--- a/src/main/resources/regression/hc4-neuclir22-fa-en.yaml
+++ b/src/main/resources/regression/hc4-neuclir22-fa-en.yaml
@@ -61,61 +61,61 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -language fa
+    params: -bm25
     results:
       MAP:
-        - 0.0519
-        - 0.0526
-        - 0.0571
+        - 0.0933
+        - 0.0973
+        - 0.1062
       nDCG@20:
-        - 0.0701
-        - 0.0745
-        - 0.0808
+        - 0.1607
+        - 0.1538
+        - 0.1746
       J@20:
-        - 0.0701
-        - 0.0730
-        - 0.0790
+        - 0.1350
+        - 0.1110
+        - 0.1370
       Recall@1000:
-        - 0.4490
-        - 0.4981
-        - 0.5285
+        - 0.7671
+        - 0.7087
+        - 0.7616
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -language fa
+    params: -bm25 -rm3
     results:
       MAP:
-        - 0.0524
-        - 0.0519
-        - 0.0692
+        - 0.1052
+        - 0.0968
+        - 0.1082
       nDCG@20:
-        - 0.0597
-        - 0.0693
-        - 0.0915
+        - 0.1594
+        - 0.1459
+        - 0.1688
       J@20:
-        - 0.0720
-        - 0.0750
-        - 0.0910
+        - 0.1550
+        - 0.1250
+        - 0.1470
       Recall@1000:
-        - 0.4893
-        - 0.4587
-        - 0.5866
+        - 0.7978
+        - 0.7635
+        - 0.8180
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio -language fa
+    params: -bm25 -rocchio
     results:
       MAP:
-        - 0.0503
-        - 0.0562
-        - 0.0661
+        - 0.1110
+        - 0.1064
+        - 0.1163
       nDCG@20:
-        - 0.0660
-        - 0.0738
-        - 0.0924
+        - 0.1665
+        - 0.1640
+        - 0.1770
       J@20:
-        - 0.0750
-        - 0.0760
-        - 0.0850
+        - 0.1510
+        - 0.1270
+        - 0.1470
       Recall@1000:
-        - 0.4848
-        - 0.4733
-        - 0.5671
+        - 0.7979
+        - 0.7638
+        - 0.8140
