--- a/src/main/resources/regression/hc4-neuclir22-zh-en.yaml
+++ b/src/main/resources/regression/hc4-neuclir22-zh-en.yaml
@@ -61,61 +61,61 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -language zh
+    params: -bm25
     results:
       MAP:
-        - 0.0338
-        - 0.0431
-        - 0.0447
+        - 0.0839
+        - 0.0773
+        - 0.0861
       nDCG@20:
-        - 0.0549
-        - 0.0746
-        - 0.0782
+        - 0.1271
+        - 0.1217
+        - 0.1369
       J@20:
-        - 0.0563
-        - 0.0520
-        - 0.0520
+        - 0.0860
+        - 0.0800
+        - 0.0860
       Recall@1000:
-        - 0.3816
-        - 0.3844
-        - 0.4163
+        - 0.5982
+        - 0.5573
+        - 0.6182
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -language zh
+    params: -bm25 -rm3
     results:
       MAP:
-        - 0.0387
-        - 0.0299
-        - 0.0429
+        - 0.0730
+        - 0.0845
+        - 0.0822
       nDCG@20:
-        - 0.0617
-        - 0.0586
-        - 0.0751
+        - 0.1142
+        - 0.1250
+        - 0.1292
       J@20:
-        - 0.0531
-        - 0.0470
-        - 0.0570
+        - 0.0810
+        - 0.0770
+        - 0.0940
       Recall@1000:
-        - 0.4080
-        - 0.4116
-        - 0.4529
+        - 0.6357
+        - 0.6077
+        - 0.6482
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio -language zh
+    params: -bm25 -rocchio
     results:
       MAP:
-        - 0.0393
-        - 0.0344
-        - 0.0452
+        - 0.0701
+        - 0.0842
+        - 0.0865
       nDCG@20:
-        - 0.0625
-        - 0.0681
-        - 0.0755
+        - 0.1106
+        - 0.1238
+        - 0.1327
       J@20:
-        - 0.0542
-        - 0.0490
-        - 0.0610
+        - 0.0790
+        - 0.0820
+        - 0.0870
       Recall@1000:
-        - 0.4030
-        - 0.4244
-        - 0.4570
+        - 0.6364
+        - 0.6142
+        - 0.6516
