--- a/src/main/resources/regression/hc4-neuclir22-ru-en.yaml
+++ b/src/main/resources/regression/hc4-neuclir22-ru-en.yaml
@@ -61,61 +61,61 @@ topics:
 models:
   - name: bm25-default
     display: BM25 (default)
-    params: -bm25 -language ru
+    params: -bm25
     results:
       MAP:
-        - 0.0305
-        - 0.0351
-        - 0.0326
+        - 0.1204
+        - 0.1069
+        - 0.1246
       nDCG@20:
-        - 0.0454
-        - 0.0485
-        - 0.0529
+        - 0.1693
+        - 0.1611
+        - 0.1761
       J@20:
-        - 0.0374
-        - 0.0200
-        - 0.0270
+        - 0.0720
+        - 0.0690
+        - 0.0730
       Recall@1000:
-        - 0.3799
-        - 0.3561
-        - 0.4194
+        - 0.6432
+        - 0.6632
+        - 0.6783
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -language ru
+    params: -bm25 -rm3
     results:
       MAP:
-        - 0.0440
-        - 0.0217
-        - 0.0341
+        - 0.1426
+        - 0.1217
+        - 0.1469
       nDCG@20:
-        - 0.0586
-        - 0.0341
-        - 0.0491
+        - 0.2020
+        - 0.1809
+        - 0.2239
       J@20:
-        - 0.0390
-        - 0.0210
-        - 0.0280
+        - 0.0880
+        - 0.0840
+        - 0.0970
       Recall@1000:
-        - 0.3859
-        - 0.2708
-        - 0.3476
+        - 0.7094
+        - 0.6866
+        - 0.7089
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio -language ru
+    params: -bm25 -rocchio
     results:
       MAP:
-        - 0.0468
-        - 0.0307
-        - 0.0370
+        - 0.1321
+        - 0.1150
+        - 0.1504
       nDCG@20:
-        - 0.0735
-        - 0.0470
-        - 0.0570
+        - 0.1921
+        - 0.1787
+        - 0.2218
       J@20:
-        - 0.0430
-        - 0.0220
-        - 0.0280
+        - 0.0900
+        - 0.0850
+        - 0.0900
       Recall@1000:
-        - 0.3893
-        - 0.3393
-        - 0.3694
+        - 0.7044
+        - 0.6721
+        - 0.7427
