--- a/src/main/resources/regression/neuclir22-zh-dt.yaml
+++ b/src/main/resources/regression/neuclir22-zh-dt.yaml
@@ -46,15 +46,15 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[NeuCLIR 2022 (Chinese): title](https://neuclir.github.io/)"
-    id: test_title
+    id: title
     path: topics.neuclir22.en.title.tsv
     qrel: qrels.neuclir22-zh.txt
   - name: "[NeuCLIR 2022 (Chinese): desc](https://neuclir.github.io/)"
-    id: test_description
+    id: desc
     path: topics.neuclir22.en.desc.tsv
     qrel: qrels.neuclir22-zh.txt
   - name: "[NeuCLIR 2022 (Chinese): desc+title](https://neuclir.github.io/)"
-    id: test_description_title
+    id: desc_title
     path: topics.neuclir22.en.desc.title.tsv
     qrel: qrels.neuclir22-zh.txt
 
