--- a/src/main/resources/regression/dl22-passage-unicoil-0shot.yaml
+++ b/src/main/resources/regression/dl22-passage-unicoil-0shot.yaml
@@ -59,7 +59,7 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[DL22 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
     id: dl22
-    path: topics.dl22.txt
+    path: topics.dl22.unicoil.0shot.tsv.gz
     qrel: qrels.dl22-passage.txt
 
 models:
@@ -68,40 +68,40 @@ models:
     params: -impact -pretokenized
     results:
       MAP@100:
-        - 0.2538
+        - 0.1200
       MRR@100:
-        - 0.7311
+        - 0.5831
       nDCG@10:
-        - 0.6159
+        - 0.4566
       R@100:
-        - 0.4731
+        - 0.2996
       R@1000:
-        - 0.7551
+        - 0.5543
   - name: unicoil-0shot+rm3
     display: +RM3
     params: -impact -pretokenized -rm3
     results:
       MAP@100:
-        - 0.2869
+        - 0.1292
       MRR@100:
-        - 0.7399
+        - 0.5634
       nDCG@10:
-        - 0.6164
+        - 0.4471
       R@100:
-        - 0.5141
+        - 0.2993
       R@1000:
-        - 0.7889
+        - 0.5661
   - name: unicoil-0shot+rocchio
     display: +Rocchio
     params: -impact -pretokenized -rocchio
     results:
       MAP@100:
-        - 0.2890
+        - 0.1380
       MRR@100:
-        - 0.7749
+        - 0.5577
       nDCG@10:
-        - 0.6383
+        - 0.4799
       R@100:
-        - 0.5147
+        - 0.3113
       R@1000:
-        - 0.8096
+        - 0.5847
