--- a/src/main/resources/regression/dl22-passage-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/dl22-passage-unicoil-noexp-0shot.yaml
@@ -59,7 +59,7 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[DL22 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
     id: dl22
-    path: topics.dl22.txt
+    path: topics.dl22.unicoil-noexp.0shot.tsv.gz
     qrel: qrels.dl22-passage.txt
 
 models:
@@ -68,40 +68,40 @@ models:
     params: -impact -pretokenized
     results:
       MAP@100:
-        - 0.2193
+        - 0.0869
       MRR@100:
-        - 0.6991
+        - 0.5248
       nDCG@10:
-        - 0.5756
+        - 0.3987
       R@100:
-        - 0.4246
+        - 0.2395
       R@1000:
-        - 0.6897
+        - 0.4694
   - name: unicoil-noexp-0shot+rm3
     display: +RM3
     params: -impact -pretokenized -rm3
     results:
       MAP@100:
-        - 0.2599
+        - 0.0983
       MRR@100:
-        - 0.7144
+        - 0.4334
       nDCG@10:
-        - 0.5933
+        - 0.3778
       R@100:
-        - 0.4811
+        - 0.2556
       R@1000:
-        - 0.7309
+        - 0.4943
   - name: unicoil-noexp-0shot+rocchio
     display: +Rocchio
     params: -impact -pretokenized -rocchio
     results:
       MAP@100:
-        - 0.2666
+        - 0.1054
       MRR@100:
-        - 0.7526
+        - 0.4461
       nDCG@10:
-        - 0.6088
+        - 0.3903
       R@100:
-        - 0.4728
+        - 0.2651
       R@1000:
-        - 0.7509
+        - 0.5070
