--- a/src/main/resources/regression/dl21-doc-d2q-t5.yaml
+++ b/src/main/resources/regression/dl21-doc-d2q-t5.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.msmarco-v2-doc-d2q-t5/
 collection_class: MsMarcoV2DocCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 24
-index_options: -storePositions -storeDocvectors -storeRaw
+index_options: -storeRaw
 index_stats:
   documents: 11959635
   documents (non-empty): 11959635
@@ -75,7 +75,7 @@ models:
         - 0.7066
   - name: bm25-default+rm3
     display: +RM3
-    params: -hits 1000 -bm25 -rm3
+    params: -hits 1000 -bm25 -rm3 -collection MsMarcoV2DocCollection
     results:
       MAP@100:
         - 0.2611
@@ -89,7 +89,7 @@ models:
         - 0.7574
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -hits 1000 -bm25 -rocchio
+    params: -hits 1000 -bm25 -rocchio -collection MsMarcoV2DocCollection
     results:
       MAP@100:
         - 0.2610
