--- a/src/main/resources/regression/dl21-doc-segmented-d2q-t5.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-d2q-t5.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.msmarco-v2-doc-segmented-d2q-t5/
 collection_class: MsMarcoV2DocCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 24
-index_options: -storePositions -storeDocvectors -storeRaw
+index_options: -storeRaw
 index_stats:
   documents: 124131414
   documents (non-empty): 124131414
@@ -75,7 +75,7 @@ models:
         - 0.7202
   - name: bm25-default+rm3
     display: +RM3
-    params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -bm25 -rm3
+    params: -bm25 -rm3 -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
         - 0.3191
@@ -89,7 +89,7 @@ models:
         - 0.7948
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -bm25 -rocchio
+    params: -bm25 -rocchio -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
         - 0.3218
