--- a/src/main/resources/regression/msmarco-v2-doc-d2q-t5.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-d2q-t5.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.msmarco-v2-doc-d2q-t5/
 collection_class: MsMarcoV2DocCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 24
-index_options: -storePositions -storeDocvectors -storeRaw
+index_options: -storeRaw
 index_stats:
   documents: 11959635
   documents (non-empty): 11959635
@@ -74,7 +74,7 @@ models:
         - 0.8568
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3
+    params: -bm25 -rm3 -collection MsMarcoV2DocCollection
     results:
       MAP@100:
         - 0.1126
@@ -90,7 +90,7 @@ models:
         - 0.8247
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio
+    params: -bm25 -rocchio -collection MsMarcoV2DocCollection
     results:
       MAP@100:
         - 0.1152
