--- a/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.msmarco-v2-doc-segmented/
 collection_class: MsMarcoV2DocCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
-index_options: -storePositions -storeDocvectors -storeRaw
+index_options: -storeRaw
 index_stats:
   documents: 124131414
   documents (non-empty): 124131414
@@ -74,7 +74,7 @@ models:
         - 0.8549
   - name: bm25-default+rm3
     display: +RM3
-    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -bm25 -rm3 -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
         - 0.1644
@@ -90,7 +90,7 @@ models:
         - 0.8639
   - name: bm25-default+rocchio
     display: +Rocchio
-    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    params: -bm25 -rocchio -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
         - 0.1663
