--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
@@ -10,7 +10,7 @@ index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-0shot/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 32
-index_options: -impact -pretokenized -storeDocvectors
+index_options: -impact -pretokenized -storeRaw
 index_stats:
   documents: 138364198
   documents (non-empty): 138364198
@@ -78,7 +78,7 @@ models:
         - 0.7671
   - name: unicoil-0shot+rm3
     display: +RM3
-    params: -parallelism 16 -impact -pretokenized -rm3
+    params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection
     results:
       MAP@100:
         - 0.1319
@@ -94,7 +94,7 @@ models:
         - 0.7700
   - name: unicoil-0shot+rocchio
     display: +Rocchio
-    params: -parallelism 16 -impact -pretokenized -rocchio
+    params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection
     results:
       MAP@100:
         - 0.1319
