--- a/src/main/resources/regression/cw12.yaml
+++ b/src/main/resources/regression/cw12.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.cw12/
 collection_class: ClueWeb12Collection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 44
-index_options: -storePositions -storeDocvectors -storeRaw
+index_options: -storeRaw
 index_stats:
   documents: 731645161
   documents (non-empty): 731542335
@@ -70,7 +70,7 @@ models:
         - 0.1616
   - name: bm25+rm3
     display: +RM3
-    params: -bm25 -rm3
+    params: -parallelism 16 -bm25 -rm3 -collection ClueWeb09Collection
     results:
       MAP:
         - 0.1477
@@ -102,7 +102,7 @@ models:
         - 0.1323
   - name: ql+rm3
     display: +RM3
-    params: -qld -rm3
+    params: -parallelism 16 -qld -rm3 -collection ClueWeb09Collection
     results:
       MAP:
         - 0.1284
